智能导航看板-v1.1

--- a/page01.html
+++ b/page01.html
@@ -181,7 +181,7 @@
     <div class="card-grid">
         <a href="https://juejin.cn/column/7448224551277969447" class="card" target="_blank" rel="noopener noreferrer">《Docker笔记专栏》</a>
         <a href="https://www.yuque.com/xy12306/docker/gt611idl667ez0lv?singleDoc# 《Docker和k8s笔记合集》" class="card" target="_blank" rel="noopener noreferrer">《k8s笔记合集》</a>
-        <a href="https://xy12306-01.github.io" class="card" target="_blank" rel="noopener noreferrer">★★ 刷新页面 ★★</a>
+        <a href="https://xy12306-01.github.io" class="card" >👉👉 刷新页面 👈👈</a>
         <a href="https://www.jspoo.com/" class="card" target="_blank" rel="noopener noreferrer">《聚神铺导航》</a>
         <a href="https://www.yuque.com/xy12306/wvvv7e/pvr26q1x0ouenttg?singleDoc# 《实用网页合集》" class="card" target="_blank" rel="noopener noreferrer">《实用网页合集》</a>
         <a href="https://kdocs.cn/l/caIQQKIJ96K2" class="card" target="_blank" rel="noopener noreferrer">《windows优化工具》</a>
