--- a/page02.html
+++ b/page02.html
@@ -60,7 +60,6 @@
         /* 卡片网格布局 */
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(var(--card-min-width), 1fr));
             gap: 1.5rem; /* 卡片间距 */
             padding: 1rem;
             justify-content: center; /* 居中对齐 */
@@ -133,6 +132,14 @@
             align-items: center;
             gap: 0.8rem;
             z-index: 10; /* 确保在最上层 */
+            cursor: pointer; /* 鼠标悬停时显示为可点击 */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        /* 状态栏悬停效果 */
+        .status-bar:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
         }
 
         /* 状态指示灯动画 */
@@ -142,6 +149,33 @@
             background: #52c41a;
             border-radius: 50%;
             animation: pulse 1.5s infinite;
+        }
+
+        /* 时间放大效果 */
+        .time-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.98);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 100; /* 确保在最上层 */
+            font-size: 8rem;
+            color: var(--primary-color);
+            font-weight: 600;
+            cursor: pointer; /* 点击关闭 */
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.5s ease, visibility 0.5s ease;
+        }
+
+        /* 显示时间放大效果 */
+        .time-overlay.active {
+            opacity: 1;
+            visibility: visible;
         }
 
         /* 大屏布局优化（≥1400px） */
@@ -170,6 +204,9 @@
                 right: 15px;
                 padding: 8px 16px;
             }
+            .time-overlay {
+                font-size: 4rem; /* 移动端字体缩小 */
+            }
         }
 
         /* 小屏手机优化（≤480px） */
@@ -186,6 +223,9 @@
             .title {
                 font-size: 1.8rem !important;
             }
+            .time-overlay {
+                font-size: 3rem; /* 小屏手机字体进一步缩小 */
+            }
         }
 
         /* 呼吸动画 */
@@ -199,7 +239,7 @@
 <body>
     <div class="dashboard">
         <h1 class="title">智能导航看板</h1>
-        <div class="card-grid">
+        <div class="card-grid" id="card-grid">
             <a href="https://juejin.cn/column/7448224551277969447" class="card" target="_blank" rel="noopener noreferrer">《Docker笔记专栏》</a>
             <a href="https://www.yuque.com/xy12306/docker/gt611idl667ez0lv?singleDoc# 《Docker和k8s笔记合集》" class="card" target="_blank" rel="noopener noreferrer">《k8s笔记合集》</a>
             <a href="https://www.jspoo.com/" class="card" target="_blank" rel="noopener noreferrer">《聚神铺导航》</a>
@@ -208,15 +248,19 @@
             <a href="https://hcnsseyzsztm.feishu.cn/wiki/NMOXwHvRoijRDSkBKUzcq25enzf" class="card" target="_blank" rel="noopener noreferrer">《服务器搭建笔记》</a>
             <a href="https://ai.com" class="card" target="_blank" rel="noopener noreferrer">《Deepseek》</a>
             <a href="https://xy12306-01.github.io" class="card" >⚡⚡ 刷新页面 ⚡⚡</a>
-
-
-            
+            <a href="https://xy12306-01.github.io" class="card" >⚡⚡ 刷新页面 ⚡⚡</a>
         </div>
     </div>
     
-    <div class="status-bar">
+    <!-- 状态栏（时间显示） -->
+    <div class="status-bar" id="status-bar">
         <span class="status-indicator"></span>
         <span id="current-time"></span>
+    </div>
+
+    <!-- 时间放大效果 -->
+    <div class="time-overlay" id="time-overlay">
+        <span id="fullscreen-time"></span>
     </div>
 
     <script>
@@ -233,11 +277,60 @@
                 hour12: false
             });
             document.getElementById('current-time').textContent = timeString;
+            document.getElementById('fullscreen-time').textContent = timeString;
         }
 
         // 初始化时间并设置定时器
         updateTime();
         setInterval(updateTime, 1000);
+
+        // 动态调整卡片布局
+        function adjustCardLayout() {
+            const cardGrid = document.getElementById('card-grid');
+            const cards = cardGrid.querySelectorAll('.card');
+            const cardCount = cards.length;
+
+            let columns, rows;
+
+            if (window.innerWidth <= 768) {
+                // 当宽度较窄时，显示单列
+                columns = 1;
+                rows = cardCount;
+            } else if (cardCount <= 6) {
+                columns = 3;
+                rows = 2;
+            } else if (cardCount <= 8) {
+                columns = 4;
+                rows = 2;
+            } else if (cardCount <= 9) {
+                columns = 3;
+                rows = 3;
+            } else {
+                columns = 4;
+                rows = Math.ceil(cardCount / 4);
+            }
+
+            cardGrid.style.gridTemplateColumns = `repeat(${columns}, minmax(240px, 1fr))`;
+            cardGrid.style.gridTemplateRows = `repeat(${rows}, minmax(100px, 1fr))`;
+        }
+
+        // 页面加载时调整布局
+        adjustCardLayout();
+        // 监听窗口大小变化，动态调整布局
+        window.addEventListener('resize', adjustCardLayout);
+
+        // 点击状态栏显示时间放大效果
+        const statusBar = document.getElementById('status-bar');
+        const timeOverlay = document.getElementById('time-overlay');
+
+        statusBar.addEventListener('click', () => {
+            timeOverlay.classList.add('active');
+        });
+
+        // 点击时间放大区域关闭效果
+        timeOverlay.addEventListener('click', () => {
+            timeOverlay.classList.remove('active');
+        });
     </script>
 </body>
 </html>
