智能导航看板-v1.5

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>随机跳转</title>
     <script>
-        // 定义两个目标页面的路径
-        const pages = ["page01.html", "page02.html"];
+        // 定义三个目标页面的路径
+        const pages = ["page01.html", "page02.html", "page03.html"];
 
         // 随机选择一个页面
         const randomPage = pages[Math.floor(Math.random() * pages.length)];
