--- a/page02.html
+++ b/page02.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,14 +95,13 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: linear-gradient(45deg, 
-                transparent 25%,
-                rgba(22, 119, 255, 0.03) 25%,
-                rgba(22, 119, 255, 0.03) 50%,
-                transparent 50%,
-                transparent 75%,
-                rgba(22, 119, 255, 0.03) 75%
-            );
+            background: linear-gradient(45deg,
+                    transparent 25%,
+                    rgba(22, 119, 255, 0.03) 25%,
+                    rgba(22, 119, 255, 0.03) 50%,
+                    transparent 50%,
+                    transparent 75%,
+                    rgba(22, 119, 255, 0.03) 75%);
             background-size: 4px 4px;
             transform: rotate(45deg);
             opacity: 0;
@@ -113,6 +113,7 @@
             transform: translateY(-3px);
             box-shadow: 0 8px 20px rgba(22, 119, 255, 0.15);
         }
+
         .card:hover::before {
             opacity: 1;
         }
@@ -158,13 +159,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(255, 255, 255, 0.98);
+            background: rgba(0, 0, 0, 0.70); /* 背景透明度调整为 70% */
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 100; /* 确保在最上层 */
             font-size: 8rem;
-            color: var(--primary-color);
+            color: #ffffff; /* 放大后时间颜色调整为白色 */
             font-weight: 600;
             cursor: pointer; /* 点击关闭 */
             opacity: 0;
@@ -176,6 +177,21 @@
         .time-overlay.active {
             opacity: 1;
             visibility: visible;
+        }
+
+        /* 放大后时间的动效 */
+        #fullscreen-time {
+            animation: time-scale 1.5s infinite alternate;
+        }
+
+        @keyframes time-scale {
+            from {
+                transform: scale(1);
+            }
+
+            to {
+                transform: scale(1.1);
+            }
         }
 
         /* 大屏布局优化（≥1400px） */
@@ -191,6 +207,7 @@
                 width: 92%; /* 两侧留白 */
                 padding: 1.5rem 0 8rem; /* 增加底部间距 */
             }
+
             .card {
                 width: 90%; /* 相对宽度 */
                 max-width: 360px; /* 最大宽度限制 */
@@ -199,11 +216,13 @@
                 font-size: 1rem;
                 min-height: 80px;
             }
+
             .status-bar {
                 bottom: 15px;
                 right: 15px;
                 padding: 8px 16px;
             }
+
             .time-overlay {
                 font-size: 4rem; /* 移动端字体缩小 */
             }
@@ -214,15 +233,18 @@
             .dashboard {
                 width: 94%; /* 更窄的容器宽度 */
             }
+
             .card {
                 width: 88%;
                 font-size: 0.95rem;
                 min-height: 75px;
                 padding: 1rem 0.8rem;
             }
+
             .title {
                 font-size: 1.8rem !important;
             }
+
             .time-overlay {
                 font-size: 3rem; /* 小屏手机字体进一步缩小 */
             }
@@ -230,12 +252,24 @@
 
         /* 呼吸动画 */
         @keyframes pulse {
-            0% { transform: scale(0.95); opacity: 0.8; }
-            50% { transform: scale(1.1); opacity: 1; }
-            100% { transform: scale(0.95); opacity: 0.8; }
+            0% {
+                transform: scale(0.95);
+                opacity: 0.8;
+            }
+
+            50% {
+                transform: scale(1.1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(0.95);
+                opacity: 0.8;
+            }
         }
     </style>
 </head>
+
 <body>
     <div class="dashboard">
         <h1 class="title">智能导航看板</h1>
@@ -247,11 +281,11 @@
             <a href="https://kdocs.cn/l/caIQQKIJ96K2" class="card" target="_blank" rel="noopener noreferrer">《windows优化工具》</a>
             <a href="https://hcnsseyzsztm.feishu.cn/wiki/NMOXwHvRoijRDSkBKUzcq25enzf" class="card" target="_blank" rel="noopener noreferrer">《服务器搭建笔记》</a>
             <a href="https://ai.com" class="card" target="_blank" rel="noopener noreferrer">《Deepseek》</a>
-            <a href="https://xy12306-01.github.io" class="card" >⚡⚡ 刷新页面 ⚡⚡</a>
-            <a href="https://xy12306-01.github.io" class="card" >⚡⚡ 刷新页面 ⚡⚡</a>
+            <a href="https://xy12306-01.github.io/page03.html" class="card">⚡⚡ 刷新页面 ⚡⚡</a>
+
         </div>
     </div>
-    
+
     <!-- 状态栏（时间显示） -->
     <div class="status-bar" id="status-bar">
         <span class="status-indicator"></span>
@@ -267,7 +301,7 @@
         // 时间更新函数
         function updateTime() {
             const now = new Date();
-            const timeString = now.toLocaleString('zh-CN', {
+            const fullTimeString = now.toLocaleString('zh-CN', {
                 year: 'numeric',
                 month: '2-digit',
                 day: '2-digit',
@@ -276,7 +310,13 @@
                 second: '2-digit',
                 hour12: false
             });
-            document.getElementById('current-time').textContent = timeString;
+            const timeString = now.toLocaleString('zh-CN', {
+                hour: '2-digit',
+                minute: '2-digit',
+                second: '2-digit',
+                hour12: false
+            });
+            document.getElementById('current-time').textContent = fullTimeString;
             document.getElementById('fullscreen-time').textContent = timeString;
         }
 
@@ -319,18 +359,18 @@
         // 监听窗口大小变化，动态调整布局
         window.addEventListener('resize', adjustCardLayout);
 
-        // 点击状态栏显示时间放大效果
+        // 点击状态栏显示/隐藏时间放大效果
         const statusBar = document.getElementById('status-bar');
         const timeOverlay = document.getElementById('time-overlay');
-
-        statusBar.addEventListener('click', () => {
-            timeOverlay.classList.add('active');
+        statusBar.addEventListener('click', function () {
+            timeOverlay.classList.toggle('active');
         });
 
-        // 点击时间放大区域关闭效果
-        timeOverlay.addEventListener('click', () => {
+        // 点击时间放大效果区域隐藏时间放大效果
+        timeOverlay.addEventListener('click', function () {
             timeOverlay.classList.remove('active');
         });
     </script>
 </body>
+
 </html>
