--- a/pages/page03.html
+++ b/pages/page03.html
@@ -162,8 +162,8 @@
             <a href="https://www.zhihu.com" target="_blank" class="btn-custom">
                 知乎
             </a>
-            <a href="https://xy12306-01.github.io/page01.html" target="_blank" class="btn-custom">
-                📚📚 刷新页面 📚📚
+            <a href="https://xy-12306.github.io"  class="btn-custom">
+                📚📚 回到主页 📚📚
             </a>
             <a href="https://www.toutiao.com" target="_blank" class="btn-custom">
                 今日头条
