--- a/pages/page01.html
+++ b/pages/page01.html
@@ -258,8 +258,8 @@
         <a href="https://kdocs.cn/l/caIQQKIJ96K2" class="card" target="_blank" rel="noopener noreferrer">《windows优化工具》</a>
         <a href="https://hcnsseyzsztm.feishu.cn/wiki/NMOXwHvRoijRDSkBKUzcq25enzf" class="card" target="_blank" rel="noopener noreferrer">《服务器搭建笔记》</a>
         <a href="https://ai.com" class="card" target="_blank" rel="noopener noreferrer">《Deepseek》</a>
-        <a href="https://xy12306-01.github.io/page02.html" class="card">👉👉 刷新页面 👈👈</a>
-        <a href="https://xy12306-01.github.io/page03.html" class="card">🔍🔍 刷新页面 🔍🔍</a>
+        <a href="https://xy-12306.github.io/pages/page01.html" class="card">👉👉 刷新页面 👈👈</a>
+        <a href="https://xy-12306.github.io" class="card">🔍🔍 回到主页 🔍🔍</a>
     </div>
     <!-- 时间显示区域 -->
     <div class="time-display" id="time-display">
