--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>现代响应式个人网站</title>
+    <title>xy12306的个人网站</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -72,8 +72,13 @@
                 <h3>Windows优化工具</h3>
                 <p>▪ 适用于Windows系统</p>
             </a>
+            <a href="https://kdocs.cn/l/caIQQKIJ96K2" class="card" target="_blank">
+                <img src="https://picsum.photos/306/200" alt="项目8">
+                <h3>Windows优化工具</h3>
+                <p>▪ 适用于Windows系统</p>
+            </a>
             <a href="https://juejin.cn/post/7449325898703683595" class="card" target="_blank">
-                <img src="https://picsum.photos/307/200" alt="项目8">
+                <img src="https://picsum.photos/307/200" alt="项目9">
                 <h3>Vmware虚拟机中安装CentOS7</h3>
                 <p>▪ 超详图文教程</p>
             </a>
