--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <h3>Windows优化工具</h3>
                 <p>▪ 适用于Windows系统</p>
             </a>
-            <a href="https://kdocs.cn/l/caIQQKIJ96K2" class="card" target="_blank">
+            <a href="https://cloud.tencent.com/edu/learning/course-3080-55782" class="card" target="_blank">
                 <img src="https://picsum.photos/306/200" alt="项目8">
-                <h3>Windows优化工具</h3>
-                <p>▪ 适用于Windows系统</p>
+                <h3>云服务操作管理（中级）培训教材</h3>
+                <p>▪ 适用于初学者</p>
             </a>
             <a href="https://juejin.cn/post/7449325898703683595" class="card" target="_blank">
                 <img src="https://picsum.photos/307/200" alt="项目9">
